# jobops

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  STATE.md  ruff.toml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/agents/: enrich.py  onboarding.py  scorer.py  tailor.py
backend/app/: admin.py  alerts.py  applog.py  auth.py  config.py  dedupe.py  digest.py  enrich.py  jobfetch.py  llm.py  mailer.py  main.py  matcher.py  matches.py  onboarding.py  ondemand.py  prefilter.py  resume.py  scanner.py  scheduled.py  supabase_client.py  usage.py
backend/app/sources/: adzuna.py  base.py
backend/tests/: test_admin.py  test_alerts.py  test_dedupe.py  test_digest.py  test_enrich.py  test_llm.py  test_mailer.py  test_main.py  test_matcher.py  test_matches.py  test_onboarding.py  test_ondemand.py  test_prefilter.py  test_resume.py  test_scanner.py  test_scheduled.py  test_sources.py  test_usage.py
docs/: DATA_MODEL.md  DEVELOPMENT.md  GUARDRAILS.md  JOB_SOURCES.md
docs/agents/: DIGEST.md  ONBOARDING.md  SCORER.md  TAILOR.md
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentStatus.tsx  AppHeader.tsx  AppliedToggle.tsx  DeleteMatchButton.tsx  DeleteTailoringButton.tsx  NavLinks.tsx  ProposalCard.tsx  (+2 more)
prompts/: M0_bootstrap.md  M1_onboarding.md  M2_link_tailor.md  M3_sources.md  M4_matching.md  M5_digests.md  M6_capstone.md
supabase/: README.md
(+28 files in other folders)
